Completed Second Project Page and Validated all pages
completed the second project by adding all the content and validated all html and css pages. Fixed all errors

--- a/citation.html
+++ b/citation.html
@@ -40,7 +40,7 @@
         <br> https://www.w3schools.com/css/css3_flexbox.asp
         <br> https://www.w3schools.com/cssref/css3_pr_filter.asp
         <br> https://www.w3schools.com/howto/howto_css_zoom_hover.asp
-        <br><br> ALL IMAGES & TEXT FROM MYSELF, NEWTON NGUYEN-LE</p>
+        <br><br> All Images & Text Copyright 2020 by Newton Nguyen-Le</p></p>
     </div>
 
 
