--- a/proj-1.html
+++ b/proj-1.html
@@ -35,12 +35,12 @@
         <div class="proj-finalimg">
           <div class="proj-imgbox">
             <img src="img/SelfPlace_1.png" alt="Project 1 - Private Self" class="proj-img">
-            <p><i>Private Self</i></p>
+            <p><b>Figure 1.</b> <i>Private Self.</i></p>
           </div>
 
           <div class="proj-imgbox">
             <img src="img/SelfPlace_2.png" alt="Project 1 - Public Self" class="proj-img">
-            <p><i>Public Self</i></p>
+            <p><b>Figure 2.</b> <i>Public Self.</i></p>
           </div>
         </div>
 
@@ -110,10 +110,14 @@
               <div class="proj-imgprocess">
                 <div class="proj-imgbox">
                   <img src="img/SP-1.png" alt="brainstorming" class="proj-imgprocess">
+                  <p><b>Figure 3.</b> <i>Brainstorming.</i></p>
                 </div>
+              </div>
 
+              <div class="proj-imgprocess">
                 <div class="proj-imgbox">
                   <img src="img/SP-2.png" alt="draft photos" class="proj-imgprocess">
+                  <p><b>Figure 4.</b> <i>Draft photos.</i></p>
                 </div>
               </div>
 
@@ -138,10 +142,14 @@
                 <div class="proj-imgprocess">
                   <div class="proj-imgbox">
                     <img src="img/SP-3.png" alt="brainstorming" class="proj-imgprocess">
+                    <p><b>Figure 5.</b> <i>Private Self Unedited.</i></p>
                   </div>
+                </div>
 
+                <div class="proj-imgprocess">
                   <div class="proj-imgbox">
                     <img src="img/SP-4.png" alt="draft photos" class="proj-imgprocess">
+                    <p><b>Figure 6.</b> <i>Public Self Images Unedited.</i></p>
                   </div>
                 </div>
 
