--- a/proj-2.html
+++ b/proj-2.html
@@ -34,8 +34,8 @@
 
         <div class="proj-finalimg">
           <div class="proj-imgbox">
-            <img src="img/Beloved-1.png" alt="Project 1 - Private Self" class="proj-img">
-            <p><i>3-in-1 book covers</i></p>
+            <img src="img/Beloved-1.png" alt="Project 2 - 3-in-1 Book Covers" class="proj-img">
+            <p><b>Figure 1.</b> <i>3-in-1 book covers.</i></p>
           </div>
         </div>
 
@@ -108,82 +108,117 @@
 
             <div class="text">
               <h1>Process</h1>
-              <h3>brainstorming</h3>
+              <h3>research</h3>
+              <br>
+              <div>
+                <b>Cover #1 (Adults, Literature)</b>
+                <br>
+                <ul>
+                  <li>More towards the African American audience</li>
+                  <li>Adults/Undergraduates (18+), not afraid to read in public</li>
+                  <li>Leaned towards a historical literature book</li>
+                  <li>Font Style: Serif, Cursive type</li>
+                  <li>More towards the African American audience</li>
+                </ul>
 
-              <div class="proj-imgprocess">
-                <div class="proj-imgbox">
-                  <img src="img/SP-1.png" alt="brainstorming" class="proj-imgprocess">
-                </div>
+                <br>
+                <b>Cover #2 (Children)</b>
+                <br>
+                <ul>
+                  <li>Aimed more towards Teens/Highschool readers</li>
+                  <li>Bold, literal and image heavy but still clean</li>
+                  <li>More of a magical realism approach</li>
+                  <li>Twilight inspirations (dark + red)</li>
+                  <li>Font Style: Serif/Fancy & San-Serif</li>
+                </ul>
 
-                <div class="proj-imgbox">
-                  <img src="img/SP-2.png" alt="draft photos" class="proj-imgprocess">
-                </div>
-              </div>
-
-              <p>I started out by creating two mind maps to draught down ideas
-                for my photos. The first mind map is for my private self and the second
-                map is for my public self. Then I took these ideas and went out with a
-                friend to take some experimenting shots. After taking the experimenting
-                shots, I went home and looked over them. I tried to create a concept
-                using the photos I had and explored the ideas that I had in mind.
-                <br><br>
-                For the first photo I wanted to keep the idea of me being behind
-                the computer screen to show my true private self and for the second
-                photo I decided I to be in an urban area and add a photo of my
-                hand holding a pencil to make it look like I’m drawing a picture
-                of myself which would represents how my public social media self
-                is a person I’ve created not my true self.</p>
+                <br>
+                <b>Cover #3 (Teens, Magical Realism)</b>
+                <br>
+                <ul>
+                  <li>Aimed towards a younger audience, children under 6 years old</li>
+                  <li>Ghost story narrative book</li>
+                  <li>Use Blue/Yellow for a more playful element</li>
+                  <li>Picture style book with little text</li>
+                  <li>Big and legible text</li>
+                  <li>Drawing/Cartoon Artwork</li>
+                </ul></div>
             </div>
 
             <div class="text">
-              <h3>photo selection</h3>
-
-                <div class="proj-imgprocess">
-                  <div class="proj-imgbox">
-                    <img src="img/SP-3.png" alt="brainstorming" class="proj-imgprocess">
-                  </div>
-
-                  <div class="proj-imgbox">
-                    <img src="img/SP-4.png" alt="draft photos" class="proj-imgprocess">
-                  </div>
+              <h1>Design Process</h1>
+              <h3>sketches</h3>
+              <div class="proj-imgprocess">
+                <div class="proj-imgbox">
+                  <img src="img/Beloved-2.png" alt="Sketches" class="proj-imgprocess">
+                  <p><b>Figure 2.</b> <i>Rough ideation hand sketches for the first two book covers (Adult and Teen)</i></p>
                 </div>
+              </div>
 
-                <p>After retaking all my photos I narrowed it down to the final
-                  photos that would best represent my idea. From there, I started to
-                  individually edit the photos starting with the "private self" photo.
+              <h3>digital mockups</h3>
+              <div class="proj-imgprocess">
+                <div class="proj-imgbox">
+                  <img src="img/Beloved-3.png" alt="Digital Sketches" class="proj-imgprocess">
+                  <p><b>Figure 3.</b> <i>Initial digital sketches for the three book covers based on the hand sketches</i></p>
+                </div>
+              </div>
+
+              <div class="proj-imgprocess">
+                <div class="proj-imgbox">
+                  <img src="img/Beloved-4.png" alt="Refined Sketches" class="proj-imgprocess">
+                  <p><b>Figure 4.</b> <i>Further refined digital sketches from the digial sketches</i></p>
+                </div>
+              </div>
+
+              <div class="text">
+                <h1>Graphic / Photo Log</h1>
+                <p>The Braided Hair (image) was used in cover #1. The original image
+                  of the braided hair has been image traced and modified. The length
+                  and style of the braid has been edited. An effect was also added
+                  to the stroke to create a more textured look. Other graphics on
+                  the cover were all original drawn artworks.
                   <br><br>
-                  For the first photo, I went into image adjustment and used the
-                  hue/saturation settings to lower the saturation down by -50. Next,
-                  I used the quick selection tool to select the background of
-                  the photo to adjust the brightness and contrast. From there, I select
-                  the light on the ceiling and darken it with the lightness adjustment
-                  in hue/saturation settings.
+                  Rose & Chain was used in cover #2. The original image has was
+                  first photoshopped to remove watermarks and elements including
+                  background, extra rose leaves, and other imperfections. The image
+                  was then traced and modified to create the final look used in the
+                  teen’s book cover.
                   <br><br>
-                  For the second photo, after opening the original photo in photoshop,
-                  I imported the picture of the seagull and used the quick selection
-                  tool to crop the bird. Then using the quick selection tool again
-                  I selected only the wings/body of the bird. I copied and pasted
-                  the wings to make a total of 4. Using the transformation tool
-                  I began to enlarge and shape the wings to my liking and then
-                  repeated the process for the rest of the wings. After placing
-                  the group of wings behind my back, I used the quick selection
-                  tool once again to select my whole body and the wings. Then I
-                  copied and paste it onto a new layer that I’ve created, from
-                  there I was able to use the cloning tool to photoshop out the
-                  buildings behind me from the original photo. Finally I selected
-                  the background layer and used the hue/saturation tool in image
-                  adjustment to increase the saturation and turn up the lightness.
-                </p>
+                  The Hay Field (image) was used in cover #3. The original image has
+                  been modified with a “cutout” style effect added onto the photo to
+                  create a drawing or sketched like image. Image was used twice.
+                  Other graphics on the cover were all original drawn artworks.</p>
+              </div>
+
+              <div class="proj-imgprocess">
+                <div class="proj-imgbox">
+                  <img src="img/Beloved-5.png" alt="Final Cover 1" class="proj-imgprocess">
+                  <p><b>Figure 5.</b> <i>Final Cover 1</i></p>
+                </div>
+              </div>
+
+              <div class="proj-imgprocess">
+                <div class="proj-imgbox">
+                  <img src="img/Beloved-6.png" alt="Final Cover 2" class="proj-imgprocess">
+                  <p><b>Figure 6.</b> <i>Final Cover 2</i></p>
+                </div>
+              </div>
+
+              <div class="proj-imgprocess">
+                <div class="proj-imgbox">
+                  <img src="img/Beloved-7.png" alt="Final Cover 3" class="proj-imgprocess">
+                  <p><b>Figure 7.</b> <i>Final Cover 3</i></p>
+                </div>
+              </div>
             </div>
 
             <div class="text">
               <h3>conclusion</h3>
-              <p>The outcome of this digital image design project was excellent, the
-                photos come out as I planned in both the print and digital version.
-                Even though the outcome of this was great, I believe the photos can
-                still be further refined to produce an even better result especially
-                the wings in the second photo.
-                </p>
+              <p>The outcome of this graphic design publishing project was great, the
+                covers were designed as intended in both the print and digital version.
+                I believe the that the covers can still be further refined to produce
+                an even better outcome especially covers 2 and 3. I believe I could better
+                design a cover that would more suitably fit the intended audiences</p>
             </div>
           </div>
         </div>
