--- a/style-guide.html
+++ b/style-guide.html
@@ -37,7 +37,7 @@
       <hr>
       <br>
       <form action="proj-2.html">
-        <button class="button-product">Next Project: <b>Book Covers<b></button>
+        <button class="button-product">Next Project: <b>Book Covers</b></button>
       </form>
     </section>
 
