Corrected Page Names and Added Fav Icon
Replaced the fav icons and fixed page names

--- a/proj-2.html
+++ b/proj-2.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Newton Nguyen-Le / Project 1</title>
-    <!-- <link href="css/main-black.css" rel="stylesheet"> -->
+    <title>Newton Nguyen-Le / Project 2</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
     <link href="css/main-white.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
   </head>
