--- a/proj-1.html
+++ b/proj-1.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Newton Nguyen-Le / Project 1</title>
-    <!-- <link href="css/main-black.css" rel="stylesheet"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
     <link href="css/main-white.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
   </head>
