--- a/style-guide.html
+++ b/style-guide.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio - Style Guide</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
     <link href="css/main-black.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
   </head>
