--- a/proj-2.html
+++ b/proj-2.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Newton Nguyen-Le / Project 2</title>
+    <title>NEWTON NGUYEN-LE / Project 2</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
     <link href="css/main-white.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
