--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Newton Nguyen-Le, Designer & Photographer</title>
+    <title>NEWTON NGUYEN-LE</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"/>
     <link href="css/main-black.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
