Corrected Project Name and Landing Description
replaced the landing page description and project page next button name

--- a/proj-1.html
+++ b/proj-1.html
@@ -194,7 +194,7 @@
         </div>
 
         <form action="proj-2.html">
-          <button class="button-product">Next Project: <b>Book Covers</b></button>
+          <button class="button-product">Next Project: <b>Beloved</b></button>
         </form>
 
       </div>
