--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
 
     <div class="landing-head">
       <h1 class="head-logo">NEWTON <br> NGUYEN-LE</h1>
-      <p class="sub-logo"> visual design + photography <p>
+      <p class="sub-logo"> photographer + visual design student <p>
     </div>
 
     <div class=section>
