Fixed Some Errors
Fixed Active Nav for project pages, increased line height and decreased font size for project pages. Changed fav icon and button appearance

--- a/proj-1.html
+++ b/proj-1.html
@@ -19,7 +19,7 @@
       <div>
         <nav>
           <a href="work.html">WORK</a>
-          <a href="about.html" class="active-nav">ABOUT</a>
+          <a href="about.html">ABOUT</a>
         </nav>
       </div>
     </header>
