--- a/style-guide.html
+++ b/style-guide.html
@@ -38,7 +38,7 @@
       <hr>
       <br>
       <form action="proj-2.html">
-        <button class="button-product">Next Project: <b>Book Covers</b></button>
+        <button class="button-product">Next Project: <b>Beloved</b></button>
       </form>
     </section>
 
@@ -58,7 +58,7 @@
       <h2>Case Studies & Image as a Link</h2>
       <hr>
       <br>
-      <a href="proj-1.html"> <img src="img/proj-1.png" alt="Project 1" class="proj-display" id="guide-img"></a>
+      <a href="proj-1.html"> <img src="img/proj-2.png" alt="Project 2" class="proj-display" id="guide-img"></a>
     </section>
 
 
