--- a/proj-2.html
+++ b/proj-2.html
@@ -19,7 +19,7 @@
       <div>
         <nav>
           <a href="work.html">WORK</a>
-          <a href="about.html" class="active-nav">ABOUT</a>
+          <a href="about.html">ABOUT</a>
         </nav>
       </div>
     </header>
