Relinked Logo To The Correct File
corrected all the links to properly link to home

--- a/citation.html
+++ b/citation.html
@@ -14,11 +14,11 @@
 
     <header>
       <div>
-        <a href="work.html" id="logo-link"> <p id="logo">NEWTON NGUYEN-LE</p></a>
+        <a href="home.html" id="logo-link"> <p id="logo">NEWTON NGUYEN-LE</p></a>
       </div>
       <div>
         <nav>
-          <a href="work.html">WORK</a>
+          <a href="home.html">WORK</a>
           <a href="about.html" class="active-nav">ABOUT</a>
         </nav>
       </div>
