--- a/style-guide.html
+++ b/style-guide.html
@@ -48,7 +48,7 @@
       <hr>
       <br>
       <nav class="nav-guide">
-        <a href="work.html">WORK</a>
+        <a href="home.html">WORK</a>
         <a href="about.html">ABOUT</a>
       </nav>
     </section>
