--- a/home.html
+++ b/home.html
@@ -14,11 +14,11 @@
 
     <header>
       <div>
-        <a href="work.html" id="logo-link"> <p id="logo-home">NEWTON NGUYEN-LE</p></a>
+        <a href="home.html" id="logo-link"> <p id="logo-home">NEWTON NGUYEN-LE</p></a>
       </div>
       <div>
         <nav>
-          <a href="work.html" class="active-nav">WORK</a>
+          <a href="home.html" class="active-nav">WORK</a>
           <a href="about.html">ABOUT</a>
         </nav>
       </div>
